--- a/styles.css
+++ b/styles.css
@@ -3,43 +3,60 @@
 }
 
 canvas {
-    background-color: lightgrey;
-    border: 2px solid black;
+    background-color: rgb(0, 0, 0);
+    border: 2px solid rgb(255, 255, 255);
     width: 350px;
-    height: 500px;
+    height: 480px;
     display: block;
     margin: 0 auto;
+    border-radius: 20px;
 }
 h1{
     text-align: center;
-    color: darkblue;
+    color: rgb(0, 0, 0);
 }
 
 h4{
     text-align: center;
-    color: darkblue;
+    color: rgb(0, 0, 0);
 }
 
 .fa-arrow-left{
 
     margin-right: 50px;
     font-size: 80px; 
-    color: darkblue;
+    color: rgb(0, 0, 0);
 }
 
 .fa-arrow-right{
     margin-right: 0px;
     font-size: 80px;
-    color: darkblue;
+    color: rgb(0, 0, 0);
 }
    
 
 #pauseBtn {
     width: 120px;
-    height: 50px;
+    height: 40px;
+    text-align: center;
     font-size: 1.5em;
     margin: 20px auto;
     display: block;
+    color: rgb(254, 254, 255);
+    border-radius: 20px;
+    background-color: black;
+}
+
+#Recommencer {
+    height: 40px;
+    width: 250px;
+    text-align: center;
+    font-size: 1.5em;
+    margin: 20px auto;
+    display: block;
+    color: rgb(255, 255, 255);
+    border-radius: 20px;
+    background-color: rgb(0, 0, 0);
 }
 .controls{
     text-align: center;
