--- a/styles.css
+++ b/styles.css
@@ -13,11 +13,13 @@ canvas {
 }
 h1{
     text-align: center;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif ;
     color: rgb(0, 0, 0);
 }
 
-h4{
+h4, h3{
     text-align: center;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif ;
     color: rgb(0, 0, 0);
 }
 
@@ -45,6 +47,7 @@ h4{
     color: rgb(254, 254, 255);
     border-radius: 20px;
     background-color: black;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif ;
 }
 
 #Recommencer {
@@ -57,6 +60,7 @@ h4{
     color: rgb(255, 255, 255);
     border-radius: 20px;
     background-color: rgb(0, 0, 0);
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif ;
 }
 .controls{
     text-align: center;
@@ -65,7 +69,7 @@ h4{
 }
 
 @media (pointer: fine) {
-    .fa-arrow-right, .fa-arrow-left {
+    .arrow {
         display: none;
         text-align : center;
     }
